--- a/build
+++ b/build
@@ -1,1 +1,1 @@
-g++ -std=c++11 source/socket.cpp -I./include/ source/main.cpp -o socket
+g++ -std=c++11 source/tcp_socket.cpp -I./include/ source/main.cpp -o socket
